pods/collaborator/kube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account
  template:
    metadata:
      labels:
        app: account
    spec:
      containers:
        - name: app
          image: hardcoreeng/account
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
