pods/collaborator/kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
  name: account-ingress
spec:
  tls:
  - hosts:
    - account.hc.engineering
    secretName: account-tls
  rules:
  - host: account.hc.engineering
    http:
      paths:
      - backend:
          service:
            name: account
            port: 
              number: 80
        path: /
        pathType: Prefix
